--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ionic-native/core": "~4.17.0",
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
-    "@ionic/storage": "2.2.0",
+    "@ionic/storage": "^2.2.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.1.2",
     "@ngrx/store": "^6.1.2",
@@ -35,6 +35,7 @@
     "cordova-plugin-splashscreen": "^5.0.2",
     "cordova-plugin-statusbar": "^2.4.2",
     "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.5.2",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "ngrx-store-logger": "^0.2.2",
@@ -55,7 +56,8 @@
       "cordova-plugin-device": {},
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
-      "cordova-plugin-ionic-keyboard": {}
+      "cordova-plugin-ionic-keyboard": {},
+      "cordova-sqlite-storage": {}
     },
     "platforms": [
       "browser"
